--- a/pages/paginainicio.html
+++ b/pages/paginainicio.html
@@ -18,7 +18,7 @@
         <header class="site-header">
             <div class="brand">
                 <div class="brand-icon" aria-hidden="true"></div>
-                <span class="brand-name">AutoServ</span>
+                <span class="brand-name">Mechapp</span>
             </div>
             <nav class="main-nav" aria-label="Principal">
                 <a href="#inicio" class="nav-link active">Inicio</a>
