creacion pagina recuperar contraseña

--- a/pages/login.html
+++ b/pages/login.html
@@ -54,7 +54,7 @@
                         <label for="remember">
                             <input type="checkbox" id="remember" name="remember" /> Recuérdame
                         </label>
-                        <a href="#">¿Olvidaste tu contraseña?</a>
+                        <a href="./recuperar-contrasena.html">¿Olvidaste tu contraseña?</a>
                     </div>
                     <div class="actions">
                         <button type="submit" class="button">Iniciar sesión</button>
