Add user profile page and navigation links

--- a/pages/paginainicio.html
+++ b/pages/paginainicio.html
@@ -24,9 +24,12 @@
                 <a href="#inicio" class="nav-link active">Inicio</a>
                 <a href="#citas" class="nav-link">Citas</a>
                 <a href="#mensajes" class="nav-link">Mensajes</a>
-                <a href="#perfil" class="nav-link">Perfil</a>
+                <a href="./perfil.html" class="nav-link">Perfil</a>
             </nav>
-            <a href="#agendar" class="button button-primary">Agendar Cita</a>
+            <div class="header-actions">
+                <a href="#agendar" class="button button-primary">Agendar Cita</a>
+                <a href="./perfil.html" class="button ghost">Mi Perfil</a>
+            </div>
         </header>
 
         <main>
@@ -36,7 +39,7 @@
                     <span class="hero-tag">Tus Técnicos</span>
                     <h1>Confianza en Cada Reparación</h1>
                     <p>Tu Solución para el Mantenimiento Automotriz.</p>
-                    <a class="button" href="#perfil">Ver Perfil</a>
+                    <a class="button" href="./perfil.html">Ver Perfil</a>
                 </div>
             </section>
 
