--- a/pages/login.html
+++ b/pages/login.html
@@ -18,8 +18,11 @@
         <main>
             <section class="auth-card" aria-labelledby="login-title">
                 <div class="brand" aria-label="AutoServ">
-                    <div class="brand-icon" aria-hidden="true"></div>
-                    <span>AutoServ</span>
+                    <a class="brand-link" href="./paginainicio.html">
+                        <div class="brand-icon" aria-hidden="true"></div>
+                        <span>AutoServ</span>
+                    </a>
+                    <a class="back-home" href="./paginainicio.html">Volver al inicio</a>
                 </div>
 
                 <header class="auth-header">
