--- a/pages/login.html
+++ b/pages/login.html
@@ -30,7 +30,7 @@
                     <p>Accede a tu cuenta para agendar citas, enviar mensajes y revisar tu historial.</p>
                 </header>
 
-                <form>
+                <form id="login-form" data-form="login" novalidate>
                     <div class="field">
                         <label for="email">Correo electrónico</label>
                         <input
@@ -40,7 +40,9 @@
                             placeholder="nombre@correo.com"
                             autocomplete="email"
                             required
+                            aria-describedby="login-email-error"
                         />
+                        <p class="error-message" id="login-email-error" aria-live="polite"></p>
                     </div>
                     <div class="field">
                         <label for="password">Contraseña</label>
@@ -51,7 +53,15 @@
                             placeholder="Ingresa tu contraseña"
                             autocomplete="current-password"
                             required
+                            aria-describedby="login-password-error"
                         />
+                        <ul class="password-rules" aria-live="polite">
+                            <li data-password-rule="length">Al menos 8 caracteres.</li>
+                            <li data-password-rule="uppercase">Incluye una letra mayúscula.</li>
+                            <li data-password-rule="lowercase">Incluye una letra minúscula.</li>
+                            <li data-password-rule="numberOrSymbol">Incluye un número o símbolo.</li>
+                        </ul>
+                        <p class="error-message" id="login-password-error" aria-live="polite"></p>
                     </div>
                     <div class="inline">
                         <label for="remember">
@@ -60,7 +70,7 @@
                         <a href="./recuperar-contrasena.html">¿Olvidaste tu contraseña?</a>
                     </div>
                     <div class="actions">
-                        <button type="submit" class="button">Iniciar sesión</button>
+                        <button type="submit" class="button" disabled aria-disabled="true">Iniciar sesión</button>
                     </div>
                 </form>
 
@@ -70,5 +80,6 @@
                 </div>
             </section>
         </main>
+        <script src="../src/auth-forms.js" defer></script>
     </body>
 </html>
