--- a/pages/paginainicio.html
+++ b/pages/paginainicio.html
@@ -25,10 +25,12 @@
                 <a href="#citas" class="nav-link">Citas</a>
                 <a href="#mensajes" class="nav-link">Mensajes</a>
                 <a href="./perfil.html" class="nav-link">Perfil</a>
+                <a href="./registro-taller.html" class="nav-link">Registrar Taller</a>
             </nav>
             <div class="header-actions">
                 <a href="#agendar" class="button button-primary">Agendar Cita</a>
                 <a href="./perfil.html" class="button ghost">Mi Perfil</a>
+                <a href="./registro-taller.html" class="button ghost">Registrar Taller</a>
             </div>
         </header>
 
