Implement SQLite-backed user auth flow

--- a/pages/login.html
+++ b/pages/login.html
@@ -69,6 +69,7 @@
                         </label>
                         <a href="./recuperar-contrasena.html">¿Olvidaste tu contraseña?</a>
                     </div>
+                    <p class="form-status" data-form-status hidden aria-live="polite"></p>
                     <div class="actions">
                         <button type="submit" class="button" disabled aria-disabled="true">Iniciar sesión</button>
                     </div>
