--- a/pages/registro.html
+++ b/pages/registro.html
@@ -107,6 +107,7 @@
                         <p class="hint">Sube una foto legible de tu certificación como mecánico.</p>
                         <p class="error-message" id="register-certificate-error" aria-live="polite"></p>
                     </div>
+                    <p class="form-status" data-form-status hidden aria-live="polite"></p>
                     <div class="actions">
                         <button type="submit" class="button" disabled aria-disabled="true">Registrarme</button>
                     </div>
