Add login button and logo to home page

--- a/pages/paginainicio.html
+++ b/pages/paginainicio.html
@@ -23,7 +23,7 @@
     <body>
         <header class="site-header">
             <div class="brand">
-                <div class="brand-icon" aria-hidden="true"></div>
+                <img src="../assets/logo.svg" alt="Mechapp" class="brand-logo" />
                 <span class="brand-name">Mechapp</span>
             </div>
             <nav class="main-nav" aria-label="Principal">
@@ -35,6 +35,7 @@
                 <a href="./registro-taller.html" class="nav-link">Registrar Taller</a>
             </nav>
             <div class="header-actions">
+                <a href="./login.html" class="button button-secondary">Iniciar sesión</a>
                 <a href="#agendar" class="button button-primary">Agendar Cita</a>
                 <a href="./perfil.html" class="button ghost">Mi Perfil</a>
                 <a href="./registro-taller.html" class="button ghost">Registrar Taller</a>
