cambio de logo en todas las paginas

--- a/pages/login.html
+++ b/pages/login.html
@@ -20,7 +20,7 @@
                 <div class="brand" aria-label="AutoServ">
                     <a class="brand-link" href="./paginainicio.html">
                         <div class="brand-icon" aria-hidden="true"></div>
-                        <span>AutoServ</span>
+                        <span>Mechapp</span>
                     </a>
                     <a class="back-home" href="./paginainicio.html">Volver al inicio</a>
                 </div>
