--- a/pages/recuperar-contrasena.html
+++ b/pages/recuperar-contrasena.html
@@ -22,7 +22,7 @@
             <section class="auth-card" aria-labelledby="recovery-title">
                 <div class="brand" aria-label="AutoServ">
                     <div class="brand-icon" aria-hidden="true"></div>
-                    <span>AutoServ</span>
+                    <span>Mechapp</span>
                 </div>
 
                 <header class="auth-header">
