--- a/pages/registro.html
+++ b/pages/registro.html
@@ -19,7 +19,7 @@
             <section class="auth-card" aria-labelledby="register-title">
                 <div class="brand" aria-label="AutoServ">
                     <div class="brand-icon" aria-hidden="true"></div>
-                    <span>AutoServ</span>
+                    <span>Mechapp</span>
                 </div>
 
                 <header class="auth-header">
